--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "emacs.d/vendor/magit"]
 	path = emacs.d/vendor/magit
 	url = https://github.com/magit/magit.git
+[submodule "emacs.d/vendor/git-commit"]
+	path = emacs.d/vendor/git-commit
+	url = https://github.com/rafl/git-commit-mode.git
