tmux: Use the aggressive-resize automatically

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,6 +35,9 @@ set-option -g history-limit 10000
 # Start window indexing at one instead of zero.
 set-option -g base-index 1
 
+# Resize the current shell to the maximum size
+set-window-option -g aggressive-resize on
+
 
 # ------------------------------------------------------------------------------
 # General Key Bindings
