--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,8 @@
 # ------------------------------------------------------------------------------
 #          FILE:  .tmux.conf
 #   DESCRIPTION:  tmux configuration file.
-#       AUTHORS:  Sorin Ionescu <sorin.ionescu@gmail.com>, Colin Hebert <hebert.colin@gmail.com>
+#       AUTHORS:  Sorin Ionescu <sorin.ionescu@gmail.com>,
+#                 Colin Hebert <hebert.colin@gmail.com>
 #       VERSION:  1.0.2
 # ------------------------------------------------------------------------------
 
