--- a/gnupg/gpg-agent.conf
+++ b/gnupg/gpg-agent.conf
@@ -1,2 +1,6 @@
 disable-scdaemon
 enable-ssh-support
+default-cache-ttl 600
+default-cache-ttl-ssh 7200
+max-cache-ttl 7200
+max-cache-ttl-ssh 43200
