tmux: Disable the re-source shortcut (causing trouble with 1.8)

--- a/tmux.conf
+++ b/tmux.conf
@@ -150,4 +150,4 @@ set-window-option -g clock-mode-style 24
 # ------------------------------------------------------------------------------
 # Resources
 # ------------------------------------------------------------------------------
-bind-key r source-file ~/.tmux.conf; display-message "tmux.conf is reloaded"
+#bind-key r source-file ~/.tmux.conf; display-message "tmux.conf is reloaded"
