GPG: Set pinentry default location

--- a/gnupg/gpg-agent.conf
+++ b/gnupg/gpg-agent.conf
@@ -4,3 +4,4 @@ default-cache-ttl 600
 default-cache-ttl-ssh 7200
 max-cache-ttl 7200
 max-cache-ttl-ssh 43200
+pinentry-program /usr/local/MacGPG2/libexec/pinentry-mac.app/Contents/MacOS/pinentry-mac
