tmux: Make pane-switching commands compatible with nano

--- a/tmux.conf
+++ b/tmux.conf
@@ -128,10 +128,10 @@ bind-key '-' split-window -v
 bind-key '|' split-window -h
 
 # Moving between panes.
-bind-key -n 'C-h' select-pane -L
-bind-key -n 'C-j' select-pane -D
-bind-key -n 'C-k' select-pane -U
-bind-key -n 'C-l' select-pane -R
+bind-key 'C-h' select-pane -L
+bind-key 'C-j' select-pane -D
+bind-key 'C-k' select-pane -U
+bind-key 'C-l' select-pane -R
 
 # Resizing panes.
 bind-key -n 'S-Down' resize-pane -D 1
