--- a/tmux.conf
+++ b/tmux.conf
@@ -13,14 +13,15 @@
 
 # Inform programs of 256 colour support.
 #set-option -g default-terminal "screen-256color-bce"
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # Open new windows with Mac OS X pasteboard support.
 set-option -g default-command "reattach-to-user-namespace -l $SHELL -l"
 
 # Enable mouse.
 set-window-option -g mode-mouse on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-pane on
+#set-option -g mouse-resize-pane on
+#set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 
 # List activity on all windows.
@@ -48,20 +49,20 @@ set-window-option -g aggressive-resize on
 #set-window-option -g mode-keys vi
 
 # Move the Mac OS X clipboard into tmux paste buffer.
-bind-key 'P' run-shell "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+#bind-key 'P' run-shell "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 
 # Move tmux copy buffer into the Mac OS X clipboard.
-bind-key 'Y' run-shell 'tmux show-buffer | pbcopy'
+#bind-key 'Y' run-shell 'tmux show-buffer | pbcopy'
 
 # Confirm before killing pane.
-bind-key 'k' confirm-before kill-pane
+#bind-key 'k' confirm-before kill-pane
 
 # Toggle status bar.
-bind-key 'b' set-option status
+#bind-key 'b' set-option status
 
 # Meta + Left/Right cycles through windows.
-bind-key -n 'M-right' next-window
-bind-key -n 'M-left' previous-window
+bind-key -n 'M-Tab' next-window
+bind-key -n 'M-BTab' previous-window
 
 
 # ------------------------------------------------------------------------------
@@ -69,49 +70,50 @@ bind-key -n 'M-left' previous-window
 # ------------------------------------------------------------------------------
 
 # Use UTF-8 in status bar.
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 
 # Use key map for the status bar.
-set-option -g status-keys vi
+#set-option -g status-keys vi
 
 # The position of the window list (left, centre, or right).
 set-option -g status-justify centre
 
 # Update the status bar every n seconds.
-set-option -g status-interval 5
+#set-option -g status-interval 5
 
 # The maximum length of the left component of the status bar.
-set-option -g status-left-length 20
+#set-option -g status-left-length 20
 
 # The maximum length of the right component of the status bar.
-set-option -g status-right-length 20
+#set-option -g status-right-length 20
 
 # Status bar format.
 set-option -g status-left ''
-set-option -g status-right '#[fg=green] ###S#[default]'
+set-option -g status-right ''
+#set-option -g status-right '#[fg=green] ###S#[default]'
 
 # On-screen time for display-panes in ms.
-set-option -g display-time 2000
+#set-option -g display-time 2000
 
 # Default status bar colours.
-set-option -g status-fg white
+#set-option -g status-fg white
 set-option -g status-bg black
-set-option -g status-attr bright
+#set-option -g status-attr bright
 
 # Default window title colours.
 set-window-option -g window-status-fg white
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+#set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
 
 # Active window title colours.
 set-window-option -g window-status-current-fg green
-set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-attr bright
 
 # Command/message line colours.
-set-option -g message-fg white
-set-option -g message-bg black
-set-option -g message-attr bright
+#set-option -g message-fg white
+#set-option -g message-bg black
+#set-option -g message-attr bright
 
 
 # ------------------------------------------------------------------------------
@@ -120,31 +122,31 @@ set-option -g message-attr bright
 set-option -g display-panes-time 2000
 
 # Pane borders.
-set-option -g pane-border-fg white
-set-option -g pane-active-border-fg blue
+#set-option -g pane-border-fg white
+#set-option -g pane-active-border-fg blue
 
 # Splitting panes.
-bind-key '-' split-window -v
-bind-key '|' split-window -h
+#bind-key '-' split-window -v
+#bind-key '|' split-window -h
 
 # Moving between panes.
-bind-key 'C-h' select-pane -L
-bind-key 'C-j' select-pane -D
-bind-key 'C-k' select-pane -U
-bind-key 'C-l' select-pane -R
+#bind-key 'C-h' select-pane -L
+#bind-key 'C-j' select-pane -D
+#bind-key 'C-k' select-pane -U
+#bind-key 'C-l' select-pane -R
 
 # Resizing panes.
-bind-key -n 'S-Down' resize-pane -D 1
-bind-key -n 'S-Up' resize-pane -U 1
-bind-key -n 'S-Left' resize-pane -L 1
-bind-key -n 'S-Right' resize-pane -R 1
+#bind-key -n 'S-Down' resize-pane -D 1
+#bind-key -n 'S-Up' resize-pane -U 1
+#bind-key -n 'S-Left' resize-pane -L 1
+#bind-key -n 'S-Right' resize-pane -R 1
 
 
 # ------------------------------------------------------------------------------
 # Clock
 # ------------------------------------------------------------------------------
-set-window-option -g clock-mode-colour cyan
-set-window-option -g clock-mode-style 24
+#set-window-option -g clock-mode-colour cyan
+#set-window-option -g clock-mode-style 24
 
 
 # ------------------------------------------------------------------------------
