Fix TMUX and use -w for vscode

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,9 +63,6 @@ bind-key -n 'M-BTab' previous-window
 # Status Bar
 # ------------------------------------------------------------------------------
 
-# Use UTF-8 in status bar.
-#set-option -g status-utf8 on
-
 # Use key map for the status bar.
 #set-option -g status-keys vi
 
@@ -90,24 +87,16 @@ set-option -g status-right ''
 #set-option -g display-time 2000
 
 # Default status bar colours.
-#set-option -g status-fg white
-set-option -g status-bg black
-#set-option -g status-attr bright
+set-option -g status-style "fg=white,bg=black,bright"
 
 # Default window title colours.
-set-window-option -g window-status-fg white
-#set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set-window-option -g window-status-style "fg=white,bg=default,dim"
 
 # Active window title colours.
-set-window-option -g window-status-current-fg green
-#set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style "fg=green,bg=default,bright"
 
 # Command/message line colours.
-#set-option -g message-fg white
-#set-option -g message-bg black
-#set-option -g message-attr bright
+set-option -g message-style "fg=white,bg=black,bright"
 
 
 # ------------------------------------------------------------------------------
