--- a/tmux.conf
+++ b/tmux.conf
@@ -13,7 +13,7 @@
 
 # Inform programs of 256 colour support.
 #set-option -g default-terminal "screen-256color-bce"
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # List activity on all windows.
 set-option -g bell-action any
