Fix tmux configuration
Tmux recent change of default terminal from screen-256color to
tmux-256color (https://github.com/tmux/tmux/issues/3218) breaks on
homebrew (https://github.com/Homebrew/homebrew-core/issues/102748#issuecomment-1145378599).
This should bring back the screen-256color configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,8 +12,7 @@
 # ------------------------------------------------------------------------------
 
 # Inform programs of 256 colour support.
-#set-option -g default-terminal "screen-256color-bce"
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g default-terminal "screen-256color"
 
 # List activity on all windows.
 set-option -g bell-action any
